refactor default provider for NodeExecutorService
use a "Profile" definition for defaults for node executor providers, which can be configured separately
supply a legacy implementation to fall back on